Abstracted further, sprite2d and input classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,9 @@
         "ios": "cpp",
         "locale": "cpp",
         "queue": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "__locale": "cpp",
+        "text_encoding": "cpp",
+        "chrono": "cpp"
     }
 }
